[package]
name = "mini-lsm-starter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "^0.1"
parking_lot = "^0.12"
ouroboros = "^0.15"
moka = "^0.9"
crc32fast = "1.3.2"
flume = "^0.11.0"
libc = "^0.2.149"
bytes-utils = "0.1.3"

[dev-dependencies]
tempfile = "3"

[features]
default = []
